# ssh-honeypot

./: .dockerignore  .gitignore  Dockerfile  README.md  cmd-directory.json  docker-compose.yml  honeypot.py  pyproject.toml
