[tool.poetry]
name = "ssh-honeypot"
version = "1.0.0"
description = "A basic SSH Honeypot"
authors = ["Gita Alekhya Paul <54375111+gitaalekhyapaul@users.noreply.github.com>", "Nitish Chaturvedi <85406812+waterupto@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
